src/objects/Loan_New__c.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Expected_Date__c</fullName>
        <description>Date we are expecting to receive the appraisal in</description>
        <inlineHelpText>Date we are expecting to receive the appraisal in</inlineHelpText>
        <label>Appraisal Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Expiration_Date__c</fullName>
        <formula>Appraisal_Effective_Date__c  + 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appraisal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Credit__c</fullName>
        <label>Broker Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Result__c</fullName>
        <label>Capacity Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Agent_Email__c</fullName>
        <label>Closing Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Closing_Agent_Phone__c</fullName>
        <label>Closing Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Closing_Agent__c</fullName>
        <label>Closing Agent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Provider__c</fullName>
        <label>Closing Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Commitment_Letter_Sent__c</fullName>
        <label>Conditional Commitment Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Condo_Questionnaire_Ordered__c</fullName>
        <label>Condo Questionnaire Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Condo_Questionnaire_Received__c</fullName>
        <label>Condo Questionnaire Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Effective_Date__c</fullName>
        <label>Credit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Satisfactory__c</fullName>
        <label>Credit Satisfactory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>YES with Extenuating Circumstances</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Supplement_Received__c</fullName>
        <label>Credit Supplement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Supplement__c</fullName>
        <label>Credit Supplement Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discounted_Value_of_Assets__c</fullName>
        <label>Discounted Value of Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Funds_Required__c</fullName>
        <label>Escrow Funds Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHACaseNumber__c</fullName>
        <label>FHA Case Number*</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Date__c</fullName>
        <label>FHA Case Number Ordered Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Eff__c</fullName>
        <label>FHA Case Number Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Received__c</fullName>
        <label>FHA Case Number Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Transferred_from_ORM__c</fullName>
        <label>FHA Case Number Transferred from ORM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Transferred_to_ORM__c</fullName>
        <label>FHA Case Number Transferred to ORM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood__c</fullName>
        <label>Flood Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Call_Date__c</fullName>
        <label>Follow Up Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gover__c</fullName>
        <label>Government Reports Date - Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Government_Reports__c</fullName>
        <label>Government Reports Date - Initial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Disbursement_Limit__c</fullName>
        <inlineHelpText>The maximum disbursement allowed at loan closing and during the first 12 month disbursement period.</inlineHelpText>
        <label>Initial Disbursement Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder_Effective_Date__c</fullName>
        <label>Insurance Binder Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder_Exp__c</fullName>
        <label>Insurance Binder Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder_Received__c</fullName>
        <label>Insurance Binder Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder__c</fullName>
        <label>Insurance Binder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <label>Investor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Advisors Group</fullName>
                </value>
                <value>
                    <fullName>Longbridge Financial, LLC</fullName>
                </value>
                <value>
                    <fullName>Traditional Mortgage Acceptance Corporation</fullName>
                </value>
                <value>
                    <fullName>Waterfall Asset Management, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LESA_Required__c</fullName>
        <label>LESA Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FULL LESA</fullName>
                </value>
                <value>
                    <fullName>Partial LESA</fullName>
                </value>
                <value>
                    <fullName>No LESA Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Credit__c</fullName>
        <label>Lender Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanNumber__c</fullName>
        <label>LoanNumber*</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Claim_Amount__c</fullName>
        <label>Maximum Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Benefits_Test_Complete__c</fullName>
        <label>Net Benefits Test Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Benefits_Test_Required__c</fullName>
        <label>Net Benefits Test Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Tax_Due_Date__c</fullName>
        <label>•	Next Tax Installment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Tax_Installment_Delinquent_Date__c</fullName>
        <label>•	Next Tax Installment Delinquent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Title_Holder_Spouse__c</fullName>
        <label>Non Borrowing Title Holder Spouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORMS_Lender_Compensation__c</fullName>
        <label>ORMS Lender Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ORMS__c</fullName>
        <label>ORMS Documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POA_NonBorrowing_Title_Holder__c</fullName>
        <label>POA NonBorrowing Title Holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payoff_1_Exp__c</fullName>
        <label>Payoff 1 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_1__c</fullName>
        <label>Payoff 1 Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_2_Exp__c</fullName>
        <label>Payoff 2 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_2__c</fullName>
        <label>Payoff 2 Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_3_Exp__c</fullName>
        <label>Payoff 3 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_3__c</fullName>
        <label>Payoff 3 Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Received_1__c</fullName>
        <label>Payoff 1 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Received_2__c</fullName>
        <label>Payoff 2 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Received_3__c</fullName>
        <label>Payoff 3 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Limit_Lock_Expiration_Date__c</fullName>
        <label>Principal Limit Lock Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Charge_History_Satisfactory__c</fullName>
        <label>Property Charge History Satisfactory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>YES with Extenuating Circumstances</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Charges_as_a_Percent_of_Income__c</fullName>
        <label>Property Charges as a Percent of Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residual_Income_Cash_Flow_Required__c</fullName>
        <label>Residual Income/Cash Flow Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>YES with Compensating Factor</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residual_Income_Cash_Flow_Satisfactory__c</fullName>
        <label>Residual Income/Cash Flow Satisfactory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>YES with Compensating Factor</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residual_Income_Required__c</fullName>
        <label>Residual Income Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Disbursement_Date__c</fullName>
        <label>Scheduled Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Transcripts_Rec__c</fullName>
        <label>Tax Transcripts Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Transcripts__c</fullName>
        <label>Tax Transcripts Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Company_Contact__c</fullName>
        <label>Title Company Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company_Email__c</fullName>
        <label>Title Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Title_Company_Phone_Number__c</fullName>
        <label>Title Company Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title_Effective_Date__c</fullName>
        <label>Title Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Expired_Date__c</fullName>
        <label>Title Expired_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Paid_to_ORM__c</fullName>
        <label>Total Fees Paid to ORM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income_for_Client_2__c</fullName>
        <label>Total Income for Client 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income_for_Each_Client__c</fullName>
        <label>Total Income for Client 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lien_Balance__c</fullName>
        <label>Total Lien Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Principal_Balance__c</fullName>
        <label>Unpaid Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VOE_Received_Date__c</fullName>
        <label>VOE Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOE__c</fullName>
        <label>VOE Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOM_Expired_Date__c</fullName>
        <label>VOM Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOM_Received_Date__c</fullName>
        <label>VOM Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOM__c</fullName>
        <label>VOM Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Willingness_Result__c</fullName>
        <label>Willingness Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Appraisal_Mailed__c</fullName>
        <label>2nd Appraisal Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Appraisal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Appraisal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Appraisal_Value__c</fullName>
        <label>2nd Appraisal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Refinance__c</fullName>
        <label>Purpose of Refinance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Closing_Date__c</fullName>
        <label>XActual Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Requested_Date__c</fullName>
        <label>XApplication Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Effective_Date_c__c</fullName>
        <label>XAppraisal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Expired_Date__c</fullName>
        <label>XAppraisal Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Received__c</fullName>
        <label>XAppraisal Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal__c</fullName>
        <description>Date appraisal was ordered</description>
        <inlineHelpText>Date appraisal was ordered</inlineHelpText>
        <label>XAppraisal Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assisted_Signing__c</fullName>
        <description>Selecting "Yes" means the client is with Blind or signing with an X.</description>
        <inlineHelpText>Selecting "Yes" means the client is with Blind or signing with an X.</inlineHelpText>
        <label>Assisted Signing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Origination__c</fullName>
        <label>XBroker Origination</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Format: Last Name, First Name</description>
        <inlineHelpText>Format: Last Name, First Name</inlineHelpText>
        <label>Client Name*</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Awaiting_Funding_Date__c</fullName>
        <label>XClosed – Awaiting Funding Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Agent_Name__c</fullName>
        <description>Name of the Closing Agent / Same as Settlement Agent.</description>
        <inlineHelpText>Name of the Closing Agent / Same as Settlement Agent.</inlineHelpText>
        <label>Closing Agent Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <description>The Actual Closing Date.</description>
        <inlineHelpText>The Actual Closing Date.</inlineHelpText>
        <label>Actual Closing Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Client_Name__c</fullName>
        <description>Format: Last Name, First Name</description>
        <inlineHelpText>Format: Last Name, First Name</inlineHelpText>
        <label>Co Client Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditionally_Approved_Date__c</fullName>
        <label>XConditionally Approved Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Exp__c</fullName>
        <label>XCredit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denied_Date__c</fullName>
        <label>XDenied Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursement_Amount__c</fullName>
        <description>Wire amount going to title company.</description>
        <inlineHelpText>Wire amount going to title company.</inlineHelpText>
        <label>Disbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Expired__c</fullName>
        <label>XFHA Case Number Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number__c</fullName>
        <label>XFHA Case Number</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Assessment_Result__c</fullName>
        <label>XFinancial Assessment Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <description>Selecting "Yes" means the client home is in a Flood Zone.</description>
        <inlineHelpText>Selecting "Yes" means the client home is in a Flood Zone.</inlineHelpText>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_Needed_To_Close__c</fullName>
        <description>Selecting "Yes" means the client is bringing cash to closing.</description>
        <inlineHelpText>Selecting "Yes" means the client is bringing cash to closing.</inlineHelpText>
        <label>Funds Needed To Close</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guardianship_Conservatorship_Required__c</fullName>
        <description>Select "Yes" If there is a Guardianship or Conservatorship on the loan.</description>
        <inlineHelpText>Select "Yes" If there is a Guardianship or Conservatorship on the loan.</inlineHelpText>
        <label>Guardianship/Conservatorship Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Helo_Margin__c</fullName>
        <label>XHelo Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Processing_Date__c</fullName>
        <label>XIn Processing Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <formula>CASE(  Mortgage_Applied_for__c ,
"FHA Traditional HECM", "Refinance",
"HECM to HECM Refinance", "Refinance",
"HELO Refinance", "Refinance",
"HECM for Purchase", "Purchase",
"HELO for Purchase", "Purchase",
"")</formula>
        <label>Loan Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MandatoryObligations__c</fullName>
        <description>Total Mandatory Obligations</description>
        <inlineHelpText>Total Mandatory Obligations</inlineHelpText>
        <label>Mandatory Obligations*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_of_Residual_Income_Fulfilled__c</fullName>
        <label>XPercent of Residual Income Fulfilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PropertyAppraisalValue__c</fullName>
        <description>Appraised value of the subject property.</description>
        <inlineHelpText>Appraised value of the subject property.</inlineHelpText>
        <label>PropertyAppraisalValue*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remainderman_on_Loan__c</fullName>
        <description>Selecting "Yes' means all or part of Title must be held as Life estate.</description>
        <inlineHelpText>Selecting "Yes' means all or part of Title must be held as Life estate.</inlineHelpText>
        <label>Remainderman on Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RepairSetAside__c</fullName>
        <description>Dollar amount set aside to do all repairs.</description>
        <inlineHelpText>Dollar amount set aside to do all repairs.</inlineHelpText>
        <label>RepairSetAside*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subject_Property_Address__c</fullName>
        <description>Property Address</description>
        <inlineHelpText>Property Address</inlineHelpText>
        <label>Subject Property Address*</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Property_City__c</fullName>
        <description>Property City</description>
        <inlineHelpText>Property City</inlineHelpText>
        <label>Subject Property City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Property_County__c</fullName>
        <description>Property County</description>
        <inlineHelpText>Property County</inlineHelpText>
        <label>Subject Property County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Property_State__c</fullName>
        <description>Property State</description>
        <inlineHelpText>Property State</inlineHelpText>
        <label>Subject Property State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Property_Zip_Code__c</fullName>
        <description>Property Zip Code</description>
        <inlineHelpText>Property Zip Code</inlineHelpText>
        <label>Subject Property Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended_Date__c</fullName>
        <label>XSuspended Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Eff__c</fullName>
        <label>XTitle Eff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalLesa__c</fullName>
        <description>The entire amount in the LESA (Lifetime Expectancy Set Aside)account.</description>
        <inlineHelpText>The entire amount in the LESA (Lifetime Expectancy Set Aside)account.</inlineHelpText>
        <label>TotalLesa*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_LESA_Amount__c</fullName>
        <label>XTotal LESA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust_Required__c</fullName>
        <description>Selecting "Yes" means if all or part of Title is held as a trust.</description>
        <inlineHelpText>Selecting "Yes" means if all or part of Title is held as a trust.</inlineHelpText>
        <label>Trust Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Full_Package_Date__c</fullName>
        <label>XWaiting for Full Package Date (old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date__c</fullName>
        <label>XWithdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Declaration</label>
        <referenceTo>Declaration__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mortgage_Applied_for__c</fullName>
        <label>Mortgage Applied for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FHA Traditional HECM</fullName>
                </value>
                <value>
                    <fullName>HECM to HECM Refinance</fullName>
                </value>
                <value>
                    <fullName>HECM for Purchase</fullName>
                </value>
                <value>
                    <fullName>HELO Refinance</fullName>
                </value>
                <value>
                    <fullName>HELO for Purchase</fullName>
                </value>
                <value>
                    <fullName>FHA Refinance HECM</fullName>
                    <isActive>false</isActive>
                    <label>FHA Refinance HECM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>decl_Cash_to_close__c</fullName>
        <description>Selecting "Yes" means the client is bringing cash to closing.</description>
        <inlineHelpText>Selecting "Yes" means the client is bringing cash to closing.</inlineHelpText>
        <label>Cash to Close</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_App_Req__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL (  LoanStatus__c  , "Proposal")), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI App Req</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Clear_to_Close__c</fullName>
        <formula>IF ( OR 
(ISPICKVAL ( LoanStatus__c , "Underwriting Clear to Close")), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Clear to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>